--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://saks-react-cicd --profile embed_svc"
+    //"deploy": "aws s3 sync build/ s3://saks-react-cicd --profile embed_svc"
+    "deploy": "aws s3 sync build/ s3://saks-react-cicd --delete"
   },
   "eslintConfig": {
     "extends": [
