--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    //"deploy": "aws s3 sync build/ s3://saks-react-cicd --profile embed_svc"
-    "deploy": "aws s3 sync build/ s3://saks-react-cicd --delete"
+    "eject": "react-scripts eject"
+    "deploy": "aws s3 sync build s3://saks-react-cicd"
   },
   "eslintConfig": {
     "extends": [
